--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mysql-connector-python==9.3.0
 numpy==1.26.4
 openpyxl==3.1.5
 pandas==2.2.2
+openpyxl==3.1.5
 plotly==6.0.0
 psycopg2-binary==2.9.9
 pyarrow==19.0.1
