--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,163 @@
-streamlit==1.44.1
-pandas==2.2.2
-openpyxl==3.1.5
-plotly==6.0.0
-numpy==1.26.4
+altair==5.5.0
+asttokens==2.4.1
+attrs==25.3.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+branca==0.8.1
+cachetools==5.5.2
+certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dash==2.18.2
+dash-bootstrap-components==1.7.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.1
+decorator==5.1.1
+duckdb==1.2.1
+et_xmlfile==2.0.0
+executing==2.0.1
+fastjsonschema==2.21.1
+fitter==1.7.1
+Flask==3.0.3
+folium==0.19.5
+fonttools==4.53.0
+gensim==4.3.3
+geopandas==1.0.1
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.0.3
+h11==0.14.0
+idna==3.10
+imbalanced-learn==0.12.4
+importlib_metadata==8.6.1
+interchange==2021.0.4
+ipykernel==6.29.4
+ipython==8.25.0
+ipywidgets==8.1.7
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.6
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.15
+kiwisolver==1.4.5
+loguru==0.7.3
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.9.0
-seaborn==0.13.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+monotonic==1.6
+MouseInfo==0.1.3
+mysql-connector-python==9.3.0
+narwhals==1.30.0
+nbformat==5.10.4
+neo4j==5.28.1
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.2
+pansi==2024.11.0
+parso==0.8.4
+patsy==1.0.1
+pdfkit==1.0.0
+pillow==10.3.0
+platformdirs==4.2.2
+plotly==6.0.0
+prompt_toolkit==3.0.47
+protobuf==5.29.4
+psutil==5.9.8
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pure-eval==0.2.2
+py2neo==2021.2.4
+pyarrow==19.0.1
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydeck==0.9.1
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+pyogrio==0.10.0
+pyparsing==3.1.2
+pyperclip==1.9.0
+pyproj==3.7.1
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-louvain==0.16
+pytweening==1.2.0
+pytz==2024.1
+pywhatkit==5.4
+pywin32==306
+pyzmq==26.0.3
+referencing==0.36.2
+regex==2024.11.6
+reportlab==4.3.1
 requests==2.32.3
+retrying==1.3.4
+rich==14.0.0
+rich-click==1.8.8
+rpds-py==0.23.1
+scikit-learn==1.5.1
+scipy==1.13.1
+seaborn==0.13.2
+selenium==4.31.0
+setuptools==76.0.0
+shapely==2.0.7
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+statsmodels==0.14.4
+streamlit==1.45.0
+tenacity==9.0.0
+textblob==0.19.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.67.1
+traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2024.1
+Unidecode==1.3.8
+urllib3==2.2.3
+vaderSentiment==3.3.2
+watchdog==6.0.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==3.0.6
+widgetsnbextension==4.0.14
+wikipedia==1.4.0
+win32_setctime==1.2.0
+wordcloud==1.9.4
+wrapt==1.16.0
+wsproto==1.2.0
+XlsxWriter==3.2.2
+xyzservices==2025.1.0
+zipp==3.21.0
